5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1594_2043.log
== SUBMITION (2019-03-29 16:59:30) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = a + b + c + d /2
print (media())

-- EXECUTION TIME:
0.171431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:59:32) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = a + b + c + d /2
print (media())

-- EXECUTION TIME:
0.186215
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:59:33) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = a + b + c + d /2
print (media())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:00:44) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)
print(media.float/2)

-- EXECUTION TIME:
0.181498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:00:44) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)
print(media.float/2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:01:43) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)


-- EXECUTION TIME:
0.176376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:01:43) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:02:21) 
-- CODE:
a = int(input(float("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)


-- ERROR:
File "XXXX", line 2
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:03:14) 
-- CODE:
a = int(input(float("digite a:")))
b = int(input(float("digite b:")))
c = int(input(float("digite c:")))
d = int(input(float("digite d:")))

media = (a + b + c + d /2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input(float("digite a:")))
ValueError: could not convert string to float: 'digite a:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:04:44) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)
print(round,2)

-- EXECUTION TIME:
0.175188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:04:45) 
-- CODE:
a = int(input("digite a:"))
b = int(input("digite b:"))
c = int(input("digite c:"))
d = int(input("digite d:"))

media = (a + b + c + d /2)
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:07:29) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2))
print(round(b,2))
print(round(c,2))
print(round(d,2))

-- OUTPUT:
8.0
8.5
7.0
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:07:41) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2))
print(round(b,2))
print(round(c,2))
print(round(d,2))

-- EXECUTION TIME:
0.197483
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.0
8.5
7.0
9.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
7.0
7.0
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.75
6.9
7.95
8.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:07:48) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2))
print(round(b,2))
print(round(c,2))
print(round(d,2))

-- OUTPUT:
8.0
8.5
7.0
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:08:14) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2)/2)
print(round(b,2)/2)
print(round(c,2)/2)
print(round(d,2)/2)

-- EXECUTION TIME:
0.129744
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
4.0
4.25
3.5
4.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
3.5
3.5
3.5
3.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.875
3.45
3.975
4.495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:08:15) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2)/2)
print(round(b,2)/2)
print(round(c,2)/2)
print(round(d,2)/2)

-- EXECUTION TIME:
0.129494
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
4.0
4.25
3.5
4.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
3.5
3.5
3.5
3.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.875
3.45
3.975
4.495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:08:15) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2)/2)
print(round(b,2)/2)
print(round(c,2)/2)
print(round(d,2)/2)

-- OUTPUT:
4.0
4.25
3.5
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:08:36) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2)/2)
print(round(b,2)/2)
print(round(c,2)/2)
print(round(d,2)/2)

-- EXECUTION TIME:
0.130372
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
4.0
4.25
3.5
4.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
3.5
3.5
3.5
3.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.875
3.45
3.975
4.495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:08:46) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2)/2)
print(round(b,2)/2)
print(round(c,2)/2)
print(round(d,2)/2)

-- OUTPUT:
4.0
4.25
3.5
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:08:48) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(a,2)/2)
print(round(b,2)/2)
print(round(c,2)/2)
print(round(d,2)/2)

-- OUTPUT:
4.0
4.25
3.5
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:09:40) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(media,2)/2)

-- OUTPUT:
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:10:05) 
-- CODE:
a = float(input("digite a:"))
b = float(input("digite b:"))
c = float(input("digite c:"))
d = float(input("digite d:"))

media = (a + b + c + d /2)
print(round(media,2)/2)

-- EXECUTION TIME:
0.141881
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
14.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
12.25
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
12.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:13:10) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = (a + b + c + d /2)
print(round(media,2)/2)

-- EXECUTION TIME:
0.153983
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = (a + b + c + d /2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:10) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = (a + b + c + d /2)
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media = (a + b + c + d /2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:28) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = a + b + c + d /2
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:39) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media= a + b + c + d /2
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media= a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:43) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media=a + b + c + d /2
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media=a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:46) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media= a + b + c + d /2
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media= a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:13:48) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media= a + b + c + d /2
print(round(media,2)/2)

-- EXECUTION TIME:
0.12805
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media= a + b + c + d /2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:39) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")
media = a + b + c + d /2
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 5
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:49) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

	media = a + b + c + d /2
	print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:01) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = a + b + c + d /2
print(round(media,2)/2)

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:15:25) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = a + b + c + d /2
print(round(media,2)/)

-- EXECUTION TIME:
0.147925
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:27) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = a + b + c + d /2
print(round(media,2)/)

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:37) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

var = a + b + c + d /2
print(round(media,2)/)

-- ERROR:
File "XXXX", line 6
    var = a + b + c + d /2
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:15:39) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

var = a + b + c + d /2
print(round(media,2)/)

-- EXECUTION TIME:
0.142531
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    var = a + b + c + d /2
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:40) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

var = a + b + c + d /2
print(round(media,2)/)

-- ERROR:
File "XXXX", line 6
    var = a + b + c + d /2
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:17:05) 
-- CODE:
a = float(input("8.0"))
b = float(input("5.0"))
c = float(input("7.5"))
d = float(input("6.5")

media = a + b + c + d /2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:18:22) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4")

media = a + b + c + d /2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:18:24) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4")

media = a + b + c + d /2
print(round(media,2))

-- EXECUTION TIME:
0.133324
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:18:25) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4")

media = a + b + c + d /2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d /2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:18:30) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:18:31) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- EXECUTION TIME:
0.155393
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:18:32) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:18:38) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4 ")

media = a + b + c + d // 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d // 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:19:31) 
-- CODE:
a = int(input("1"))
b = input(input("2"))
c = input(input("3"))
d = input(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:19:33) 
-- CODE:
a = int(input("1"))
b = input(input("2"))
c = input(input("3"))
d = input(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- EXECUTION TIME:
0.130733
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:19:33) 
-- CODE:
a = int(input("1"))
b = input(input("2"))
c = input(input("3"))
d = input(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:19:48) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:19:50) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- EXECUTION TIME:
0.151494
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:19:50) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:20:37) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

float = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    float = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:21:53) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:21:55) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a + b + c + d / 2
print(round(media,2))

-- EXECUTION TIME:
0.148521
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a + b + c + d / 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:22:51) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a*1 + b*2 + c*3 + d*4 / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a*1 + b*2 + c*3 + d*4 / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:22:52) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a*1 + b*2 + c*3 + d*4 / 2
print(round(media,2))

-- EXECUTION TIME:
0.121165
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a*1 + b*2 + c*3 + d*4 / 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:22:52) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a*1 + b*2 + c*3 + d*4 / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a*1 + b*2 + c*3 + d*4 / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:22:54) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a*1 + b*2 + c*3 + d*4 / 2
print(round(media,2))

-- EXECUTION TIME:
0.177268
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = a*1 + b*2 + c*3 + d*4 / 2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:22:55) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a*1 + b*2 + c*3 + d*4 / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a*1 + b*2 + c*3 + d*4 / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:23:10) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = a * 1 + b*2 + c*3 + d*4 / 2
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = a * 1 + b*2 + c*3 + d*4 / 2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:24:29) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:24:31) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:24:32) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- EXECUTION TIME:
0.151526
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:24:33) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- EXECUTION TIME:
0.136955
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:24:33) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:24:33) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- EXECUTION TIME:
0.179521
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:24:33) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- EXECUTION TIME:
0.267086
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/2043/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:28:48) 
-- CODE:
a = int(input("1"))
b = int(input("2"))
c = int(input("3"))
d = int(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:30:44) 
-- CODE:
a = float(input("1"))
b = float(input("2"))
c = float(input("3"))
d = float(input("4 ")

media = (a*1) + (b*2) + (c*3) +(d*4) / 4
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = (a*1) + (b*2) + (c*3) +(d*4) / 4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:31:48) 
-- CODE:
a = float(input("8"))
b = float(input("8"))
c = float(input("3"))
d = float(input("4 ")

media(float(a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media(float(a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:32:23) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("3"))
d = int(input("4 ")

media(float(a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media(float(a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:32:41) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("3"))
d = int(input("4 ")

float((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    float((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:32:43) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("3"))
d = int(input("4 ")

float((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- EXECUTION TIME:
0.193685
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    float((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:32:43) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("3"))
d = int(input("4 ")

float((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    float((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:34:30) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("3"))
d = int(input("4 ")

media=((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media=((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:21) 
-- CODE:
a = float(int(input("8"))
b = float(int(input("8"))
c = float(int(input("5"))
d = float(int(input("4 ")

media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 2
    b = float(int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:43) 
-- CODE:
a = (int(input("8"))
b = float(int(input("8"))
c = float(int(input("5"))
d = float(int(input("4 ")

media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 2
    b = float(int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:53) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = float(int(input("5"))
d = float(int(input("4 ")

media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 4
    d = float(int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:36:01) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = float(int(input("4 ")

media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:36:05) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:36:07) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ((a*1) + (b*2) + (c*3) +(d*4) / 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:39:53) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4")
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:39:55) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4")
print(round(media,2))

-- EXECUTION TIME:
0.27545
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:39:57) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4")
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:06) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4"))
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ("(a*1) + (b*2) + (c*3) +(d*4) / 4"))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:48) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = ("a*1 + b*2 + c*3 + d *4 /4 ")
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = ("a*1 + b*2 + c*3 + d *4 /4 ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:41:29) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media,2))

-- ERROR:
File "XXXX", line 6
    media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:41:27) 
-- CODE:
a = int(input("8"))
b = int(input("8"))
c = int(input("5"))
d = int(input("4 ")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- ERROR:
File "XXXX", line 6
    media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:43:13) 
-- CODE:
a = int(float("8"))
b = int(float("8"))
c = int(float("5"))
d = int(float("4 ")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- ERROR:
File "XXXX", line 6
    media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:43:18) 
-- CODE:
a = int(float("8"))
b = int(float("8"))
c = int(float("5"))
d = int(float("4 ")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- EXECUTION TIME:
0.205363
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:45:36) 
-- CODE:
a = input(int(float("8")))
b = input(int(float("8")))
c = input(int(float("5")))
d = input(int(float("4 ")))

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:45:43) 
-- CODE:
a = input(int(float("8")))
b = input(int(float("8")))
c = input(int(float("5")))
d = input(int(float("4 ")))

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- EXECUTION TIME:
0.153089
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:45:44) 
-- CODE:
a = input(int(float("8")))
b = input(int(float("8")))
c = input(int(float("5")))
d = input(int(float("4 ")))

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:47:14) 
-- CODE:
a = input("8")
b = input("8")
c = input("5")
d = input("4 ")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:47:26) 
-- CODE:
a = input("8")
b = input("8")
c = input("5")
d = input("4")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")
print(round(media)

-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:47:44) 
-- CODE:
a = input("8")
b = input("8")
c = input("5")
d = input("4")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")

print(round(media)

-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:51:54) 
-- CODE:
a = input(float("8.0"))
b = input(float("8.0"))
c = input(float("5.0")
d = input(float("4.0")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")

print(round(media)

-- ERROR:
File "XXXX", line 4
    d = input(float("4.0")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:52:12) 
-- CODE:
a = input(float("8.0"))
b = input(float("8.0"))
c = input(float("5.0")
d = input(float("4.0")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")

print(round(media)

-- ERROR:
File "XXXX", line 4
    d = input(float("4.0")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:54:28) 
-- CODE:
a = float(input("8.0"))
b = float(input("8.0"))
c = float(input("5.0")
d = float(input("4.0"))

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")

print(round(media)

-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:57:33) 
-- CODE:
a = ("8.0")
b = ("8.0")
c = ("5.0")
d = ("4.0")

media = (" a * 1 + b * 2 + c * 3 + d * 4 /4 ")

print(round(media)

-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:59:42) 
-- CODE:
a = ("8.0")
b = ("8.0")
c = ("5.0")
d = ("4.0")

-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:51:20) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:41) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1)
-- EXECUTION TIME:
0.136528
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:52:24) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/4)
media1 = round(float(media),2)
print(media1)
-- EXECUTION TIME:
0.160055
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:52:33) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1)
-- EXECUTION TIME:
0.189885
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:55:50) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1,"e a media do aluno")
-- EXECUTION TIME:
0.205751
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2 e a media do aluno
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0 e a media do aluno
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94 e a media do aluno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:00) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1,"e a media do aluno")
-- EXECUTION TIME:
0.193582
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2 e a media do aluno
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0 e a media do aluno
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94 e a media do aluno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:02) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1,"e a media do aluno")
-- EXECUTION TIME:
0.148052
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2 e a media do aluno
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0 e a media do aluno
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0 e a media do aluno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:02) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1,"e a media do aluno")
-- EXECUTION TIME:
0.223397
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0 e a media do aluno
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0 e a media do aluno
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94 e a media do aluno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:05) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1,"e a media do aluno")
-- EXECUTION TIME:
0.155068
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2 e a media do aluno
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0 e a media do aluno
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94 e a media do aluno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:25:47) 
-- CODE:
nota1 = float(input("nota1:"))
nota2 = float(input("nota2:"))
nota3 = float(input("nota3:"))
nota4 = float(input("nota4:"))

m1 = float(nota1*1)
m2 = float(nota2*2)
m3 = float(nota3*3)
m4 = float(nota4*4)

var = float(m1+m2+m3+m4)

media = (var/10)
media1 = round(float(media),2)
print(media1)
-- EXECUTION TIME:
0.159932
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
